--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.11,<3.14"
 dependencies = [
+    "tiktoken (>=0.9.0,<0.10.0)"
 ]
 
 
